--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
@@ -12,9 +12,9 @@ li {
   width: 100%;
   height: 80px;
   padding: 0 30px;
-  background: linear-gradient(135deg, #1a56db, #0040a1);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   color: white;
+  background-image: url("/images/background-header1.jpg");
 
   .wrapper-logo {
     display: flex;
