--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -15,7 +15,7 @@ $background-color: #fff;
   width: 100%;
   height: 80px;
   padding: 0 30px;
-  background: linear-gradient(to right, $primary-dark, $primary-color);
+  background-image: url('/images/background-header1.jpg');
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 
   .logo {
