--- a/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.scss
+++ b/src/app/pages/teacher/exam/with-file/edit-exam-with-file/edit-exam-with-file.component.scss
@@ -39,6 +39,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 100;
+  background-image: url("/images/background-header2.jpg");
 
   .wraper-logo {
     display: flex;
