--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.html
@@ -2,7 +2,9 @@
   <div class="number-question-wrap">
     <div class="number-question">
       <p>Số câu: 10</p>
-      <button (click)="navigateToQuestion()" class="edit-button">Thêm câu hỏi</button>
+      <button (click)="navigateToQuestion()" class="edit-button">
+        Thêm câu hỏi
+      </button>
       <button class="edit-button">Sửa câu hỏi</button>
     </div>
   </div>
