--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
@@ -73,7 +73,7 @@ li {
   width: 15%;
   height: 100vh;
   padding: 120px 20px 0 20px;
-  background: #ffffff;
+  //background-image: url("/images/background-header2.jpg");
   border-right: 1px solid #ededed;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   display: flex;
