--- a/src/app/pages/teacher/exam_session/create-exam-session/create-exam-session.component.scss
+++ b/src/app/pages/teacher/exam_session/create-exam-session/create-exam-session.component.scss
@@ -17,8 +17,10 @@ $error-red: #ef4444;
   display: flex;
   justify-content: center;
   padding: 40px 20px;
-  background-color: $light-gray;
+  background-image: url("/images/background1.png");
+  background-size: cover;  background-position: bottom;
   min-height: calc(100vh - 80px); // Changed from max-height to min-height
+  overflow-y: hidden;
 }
 
 .exam-period-info {
@@ -30,7 +32,7 @@ $error-red: #ef4444;
   overflow: hidden;
   background-color: $white;
   box-shadow: 0 10px 25px rgba($dark-blue, 0.1);
-  height: fit-content; // Ensure it fits content height
+  height: fit-content;
 }
 
 .image-wrap {
