--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.html
@@ -2,7 +2,7 @@
   <div class="number-question-wrap">
     <div class="number-question">
       <p>Số câu: 10</p>
-      <button (click)="navigateToQuestion()" class="edit-button">
+      <button (click)="navigateToQuestion()"  class="edit-button">
         Thêm câu hỏi
       </button>
       <button class="edit-button">Sửa câu hỏi</button>
@@ -11,30 +11,16 @@
 
   <div class="question-list-wrap">
     <ul class="question-list">
-      <li class="question">
+      <li class="question" *ngFor="let question of questions; let i = index" >
         <p class="question-name">
-          Câu 1: Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
-          harum!
+          Câu {{ i + 1 }}: {{ question.content }}
         </p>
-        <p class="correct-answer">Đáp án đúng</p>
-        <div class="answer correct">Lorem ipsum dolor sit amet.</div>
-        <p class="other-answer">Đáp án còn lại</p>
-        <div class="answer">Lorem ipsum dolor sit amet.</div>
-        <div class="answer">Lorem ipsum dolor sit amet.</div>
-        <div class="answer">Lorem ipsum dolor sit amet.</div>
-      </li>
 
-      <li class="question">
-        <p class="question-name">
-          Câu 2: Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
-          harum!
-        </p>
-        <p class="correct-answer">Đáp án đúng</p>
-        <div class="answer correct">Lorem ipsum dolor sit amet.</div>
-        <p class="other-answer">Đáp án còn lại</p>
-        <div class="answer">Lorem ipsum dolor sit amet.</div>
-        <div class="answer">Lorem ipsum dolor sit amet.</div>
-        <div class="answer">Lorem ipsum dolor sit amet.</div>
+        <div class="answer" *ngFor="let answer of answerResponse[i]; let j = index" [ngClass]="{ 'correct': j === 0 }">
+          <p class="answer-name">
+            Câu {{ j + 1 }}: {{ answer.answerText }}
+          </p>
+        </div>
       </li>
     </ul>
   </div>
