--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -25,6 +25,7 @@ $background-color: #fff;
     flex: 1;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     letter-spacing: 0.5px;
+    cursor: pointer;
   }
 
   // Center the ng-content navigation
