--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/question-bank/question-bank.component.scss
@@ -7,7 +7,7 @@ li {
   width: 100%;
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #fff;
+  background-color: transparent;
 
   .number-question-wrap {
     width: 100%;
