--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.scss
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.scss
@@ -1,4 +1,6 @@
 .container {
+  height: 80px;
+
   .header {
     position: fixed;
     top: 0;
@@ -66,7 +68,7 @@
     .tab {
       width: 50%;
       padding: 10px 0;
-      background-color: #F3F3F3;
+      background-color: #f3f3f3;
       text-align: center;
     }
 
