--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/create-auto-generate.component.html
@@ -1,16 +1,18 @@
 <div class="container">
   <header class="header">
-    <div class="wraper-logo">
+    <div class="wrapper-logo">
       <div class="logo">Online Exam Portal</div>
       <nav class="breadcrumb">
         <span>►</span>
-        <span>Kỳ thi: {{ exam_session_name }}-{{ exam_session_description }}</span>
+        <span
+          >Kỳ thi: {{ exam_session_name }}-{{ exam_session_description }}</span
+        >
         <span>►</span>
         <span>Thêm câu hỏi</span>
       </nav>
     </div>
     <div class="return-button">
-      <button (click)="goBack()">Quay lại</button>
+      <button (click)="goBack()"><i class="fa fa-arrow-left"></i> Quay lại</button>
     </div>
   </header>
 </div>
