--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
@@ -1,7 +1,9 @@
 <body>
   <header class="header">
     <div class="wrapper-logo">
-      <div class="logo"><a [routerLink]="'home/teacher'">Online Exam Portal</a></div>
+      <div class="logo">
+        <a [routerLink]="'home/teacher'">Online Exam Portal</a>
+      </div>
       <nav class="breadcrumb">
         <span>►</span>
         <span
