--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.scss
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/question/question.component.scss
@@ -206,6 +206,11 @@ li {
 
   .question-list {
     padding: 0;
+
+    .error {
+      color: $danger-color;
+      font-size: 1.6rem;
+    }
   }
 
   .question {
