feat: update logo link to use goBack method and add cursor pointer for better UX

--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.html
@@ -2,7 +2,7 @@
   <header class="header">
     <div class="wrapper-logo">
       <div class="logo">
-        <a [routerLink]="'home/teacher'">Online Exam Portal</a>
+        <a (click)="goBack()">Online Exam Portal</a>
       </div>
       <nav class="breadcrumb">
         <span>►</span>
