--- a/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
+++ b/src/app/pages/teacher/exam_session/exam-session-dashboard/exam-session-dashboard.component.scss
@@ -26,6 +26,7 @@ li {
       font-weight: bold;
       margin-right: 20px;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+      cursor: pointer;
     }
 
     .breadcrumb {
